--- a/index.html
+++ b/index.html
@@ -8,113 +8,27 @@
     <title>(S)CSS Masterclass</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>Zoo</li>
-          <li>Contact</li>
-          <li>Team</li>
-          <li>Clients</li>
-        </ul>
-        <ul>
-        <li>Projects</li>
-        <li>Tous</li>
-      </ul>
-      </nav>
-    </header>
     <main>
-      <article>
-        <img src="https://source.unsplash.com/random/450x450" />
+    <div class="hero">
+      <div class="hero__photo"></div>
+      <h2>News that lasts.</h2>
+      <p>
+        <span>About</span>
+        Schwartz Media publishes intelligent news and current affairs that breaks the 24-hour news cycle. We offer a nuanced examination of Australia and the world, focused on fresh insight and literary expression. Our audience reads to know, not just to agree. We invest in long-form journalism where the issues demand it, providing writing of a quality that makes difficult topics clear. Schwartz Media publishes Australia’s most respected writers across The Saturday Paper, The Monthly magazine and the daily podcast 7am, alongside our sister publications, Quarterly Essay and Australian Foreign Affairs.
+      </p>
+    </div>
+    <section class="products">
+      <article class="product">
         <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
+          <span class="product__category">Journalism</span>
+          <p class="product__description">
+            Our journalists create in-depth, independent, original public interest reporting, focusing on storytelling and insight.
+          </p>
+          <a href="#" class="btn">Learn More</a>
         </div>
+        <img src="https://source.unsplash.com/random/500x360" alt="">
       </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x451" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x452" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x453" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x454" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x455" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x456" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x457" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x458" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x459" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x460" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x461" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-
-      <article>
-        <img src="https://source.unsplash.com/random/450x462" />
-        <div>
-          <h3>MOCO MONTPELLRIER IDK</h3>
-        </div>
-      </article>
-    </main>
+    </section>
+  </main>
   </body>
 </html> 
