--- a/index.html
+++ b/index.html
@@ -8,120 +8,27 @@
     <title>(S)CSS Masterclass</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>Products</li>
+          <li>Stockists</li>
+          <li>About us</li>
+        </ul>
+      </nav>
+      <h1 class="logo">
+        T<div>o</div>lv
+      </h1>
+      <span>🔎</span>
+    </header>
     <main>
       <div class="hero">
-        <div class="hero__photo"></div>
-        <h2>News that lasts.</h2>
-        <p>
-          <span>About</span> Schwartz Media publishes intelligent news and
-          current affairs that breaks the 24-hour news cycle. We offer a nuanced
-          examination of Australia and the world, focused on fresh insight and
-          literary expression. Our audience reads to know, not just to agree. We
-          invest in long-form journalism where the issues demand it, providing
-          writing of a quality that makes difficult topics clear. Schwartz Media
-          publishes Australia’s most respected writers across The Saturday
-          Paper, The Monthly magazine and the daily podcast 7am, alongside our
-          sister publications, Quarterly Essay and Australian Foreign Affairs.
-        </p>
-      </div>
-      <section class="products">
-        <article class="product">
-          <div>
-            <h4 class="product__category">Journalism</h4>
-            <p class="product__description">
-              Our journalists create in-depth, independent, original public
-              interest reporting, focusing on storytelling and insight.
-            </p>
-            <a href="#" class="btn">Learn more</a>
-          </div>
-          <img src="https://source.unsplash.com/random/500x360" />
-        </article>
-        <article class="product">
-          <div>
-            <h4 class="product__category">Journalism</h4>
-            <p class="product__description">
-              Our journalists create in-depth, independent, original public
-              interest reporting, focusing on storytelling and insight.
-            </p>
-            <a href="#" class="btn">Learn more</a>
-            <a href="#" class="btn">Learn more</a>
-          </div>
-          <img src="https://source.unsplash.com/random/500x360" />
-        </article>
-        <article class="product">
-          <div>
-            <h4 class="product__category">Journalism</h4>
-            <p class="product__description">
-              Our journalists create in-depth, independent, original public
-              interest reporting, focusing on storytelling and insight.
-            </p>
-            <a href="#" class="btn">Learn more</a>
-          </div>
-          <img src="https://source.unsplash.com/random/500x360" />
-        </article>
-        <article class="product">
-          <div>
-            <h4 class="product__category">Journalism</h4>
-            <p class="product__description">
-              Our journalists create in-depth, independent, original public
-              interest reporting, focusing on storytelling and insight.
-            </p>
-            <a href="#" class="btn">Learn more</a>
-          </div>
-          <img src="https://source.unsplash.com/random/500x360" />
-        </article>
-        <div class="line">
-          <article class="product">
-            <div>
-              <h4 class="product__category">Journalism</h4>
-              <img src="https://source.unsplash.com/random/500x360" />
-              <p class="product__description">
-                Our journalists create in-depth, independent, original public
-                interest reporting, focusing on storytelling and insight.
-              </p>
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </article>
-          <article class="product">
-            <div>
-              <h4 class="product__category">Journalism</h4>
-              <img src="https://source.unsplash.com/random/500x360" />
-              <p class="product__description">
-                Our journalists create in-depth, independent, original public
-                interest reporting, focusing on storytelling and insight.
-              </p>
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </article>
-        </div>
-      </section>
-      <div class="links">
-        <div class="link">
-          <h4>Careers</h4>
-          <span>Work at the country’s leading independent publisher. </span>
-          <a href="#" class="btn">Learn more</a>
-        </div>
-        <div class="link">
-          <h4>Careers</h4>
-          <span>Work at the country’s leading independent publisher. </span>
-          <a href="#" class="btn">Learn more</a>
-        </div>
-        <div class="link">
-          <h4>Careers</h4>
-          <span>Work at the country’s leading independent publisher. </span>
-          <a href="#" class="btn">Learn more</a>
+        <div class="hero__img"></div>
+        <div class="hero__text">
+          <h2>Eyes rest from an afternoon in the sun. Smooth textures feel cool on bare feet and skin.</h2>
+          <span>Featuring <a href="#">Kitsune sofa</a>, <a href="#">armchair</a> and <a href="#">I-O coffee table (steel base)</a></span>
         </div>
       </div>
     </main>
-    <footer>
-      <div class="footer__top">
-        <span>Schwartz</span>
-        <ul>
-          <li>Schwartz Media</li>
-          <li>Schwartz Media</li>
-          <li>Schwartz Media</li>
-        </ul>
-      </div>
-    </footer>
   </body>
 </html>
