--- a/index.html
+++ b/index.html
@@ -29,6 +29,65 @@
           <span>Featuring <a href="#">Kitsune sofa</a>, <a href="#">armchair</a> and <a href="#">I-O coffee table (steel base)</a></span>
         </div>
       </div>
+      <div class="banner">
+        <h3 class="banner__title">
+          Time for Living
+        </h3>
+        <p>Take time for life’s little moments. Browsing the news as you eat breakfast. Setting the table for hungry guests. Sinking in to your favourite armchair. At Tolv, your daily rituals are at the heart of our design. We make furniture to give you your best day, every day.</p>        
+        <span>
+          Find out more <a href="#">About us</a>
+        </span>
+      </div>
+      <section class="gallery">
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+        <div class="gallery__item">
+          <div class="gallery__background"></div>
+          <div class="gallery__text">Hello</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
